Update web shell app to not load dev.chromium.org on launch.

Loading this can delay tests that typically use the fake HTTP
server. This includes a few synchronization fixes when loading
URLs.

BUG=685412

Review-Url: https://codereview.chromium.org/2665423002
Cr-Commit-Position: refs/heads/master@{#447611}

Former-commit-id: 3432563dba5d8feb7819262688a0741a66c6bf35